parser.output
   0  $accept : %entry% $end

   1  toplevel : EOF
   2           | Command SEMI toplevel

   3  Command : Term
   4          | UCID TyBinder
   5          | LCID Binder

   6  Binder : COLON Type
   7         | EQ Term

   8  Type : ArrowType
   9       | RREF AType
  10       | SSOURCE AType
  11       | SSINK AType

  12  AType : LPAREN Type RPAREN
  13        | UCID
  14        | TTOP
  15        | BOOL
  16        | TBOT
  17        | LCURLY FieldTypes RCURLY
  18        | LT FieldTypes GT
  19        | USTRING
  20        | UUNIT
  21        | UFLOAT
  22        | NAT
  23        | URANGE
  24        | UFRAC

  25  TyBinder :
  26           | EQ Type

  27  ArrowType : AType ARROW ArrowType
  28            | AType

  29  Term : AppTerm
  30       | LAMBDA LCID COLON Type DOT Term
  31       | LAMBDA USCORE COLON Type DOT Term
  32       | IF Term THEN Term ELSE Term
  33       | LET LCID EQ Term IN Term
  34       | LET USCORE EQ Term IN Term
  35       | LETREC LCID COLON Type EQ Term IN Term
  36       | CASE Term OF Cases
  37       | AppTerm COLONEQ AppTerm

  38  AppTerm : PathTerm
  39          | AppTerm PathTerm
  40          | FIX PathTerm
  41          | REF PathTerm
  42          | BANG PathTerm
  43          | TIMESFLOAT PathTerm PathTerm
  44          | SUCC PathTerm
  45          | PRED PathTerm
  46          | ISZERO PathTerm
  47          | ADD PathTerm PathTerm
  48          | SUB PathTerm PathTerm
  49          | MUL PathTerm PathTerm
  50          | DIV PathTerm PathTerm
  51          | INV PathTerm
  52          | LESS PathTerm PathTerm
  53          | SETPRECISION PathTerm PathTerm
  54          | ROUND PathTerm PathTerm
  55          | UP PathTerm PathTerm
  56          | DOWN PathTerm PathTerm
  57          | TORANGE PathTerm

  58  PathTerm : PathTerm DOT LCID
  59           | PathTerm DOT INTV
  60           | AscribeTerm

  61  FieldTypes :
  62             | NEFieldTypes

  63  NEFieldTypes : FieldType
  64               | FieldType COMMA NEFieldTypes

  65  FieldType : LCID COLON Type
  66            | Type

  67  AscribeTerm : ATerm AS Type
  68              | ATerm

  69  TermSeq : Term
  70          | Term SEMI TermSeq

  71  ATerm : LPAREN TermSeq RPAREN
  72        | INERT LSQUARE Type RSQUARE
  73        | LCID
  74        | TRUE
  75        | FALSE
  76        | LCURLY Fields RCURLY
  77        | LT LCID EQ Term GT AS Type
  78        | STRINGV
  79        | UNIT
  80        | FLOATV
  81        | INTV
  82        | FRACV

  83  Fields :
  84         | NEFields

  85  NEFields : Field
  86           | Field COMMA NEFields

  87  Field : LCID EQ Term
  88        | Term

  89  Cases : Case
  90        | Case VBAR Cases

  91  Case : LT LCID EQ LCID GT DDARROW AppTerm

  92  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (92)

	INERT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	CASE  shift 11
	UNIT  shift 12
	REF  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	ADD  shift 18
	SUB  shift 19
	MUL  shift 20
	DIV  shift 21
	INV  shift 22
	SETPRECISION  shift 23
	ROUND  shift 24
	UP  shift 25
	DOWN  shift 26
	LESS  shift 27
	TORANGE  shift 28
	UCID  shift 29
	LCID  shift 30
	INTV  shift 31
	FLOATV  shift 32
	STRINGV  shift 33
	FRACV  shift 34
	BANG  shift 35
	EOF  shift 36
	LCURLY  shift 37
	LPAREN  shift 38
	LT  shift 39
	.  error

	toplevel  goto 40
	Command  goto 41
	Term  goto 42
	AppTerm  goto 43
	PathTerm  goto 44
	AscribeTerm  goto 45
	ATerm  goto 46


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	ATerm : INERT . LSQUARE Type RSQUARE  (72)

	LSQUARE  shift 47
	.  error


state 4
	Term : LAMBDA . LCID COLON Type DOT Term  (30)
	Term : LAMBDA . USCORE COLON Type DOT Term  (31)

	LCID  shift 48
	USCORE  shift 49
	.  error


state 5
	Term : IF . Term THEN Term ELSE Term  (32)

	INERT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	CASE  shift 11
	UNIT  shift 12
	REF  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	ADD  shift 18
	SUB  shift 19
	MUL  shift 20
	DIV  shift 21
	INV  shift 22
	SETPRECISION  shift 23
	ROUND  shift 24
	UP  shift 25
	DOWN  shift 26
	LESS  shift 27
	TORANGE  shift 28
	LCID  shift 50
	INTV  shift 31
	FLOATV  shift 32
	STRINGV  shift 33
	FRACV  shift 34
	BANG  shift 35
	LCURLY  shift 37
	LPAREN  shift 38
	LT  shift 39
	.  error

	Term  goto 51
	AppTerm  goto 43
	PathTerm  goto 44
	AscribeTerm  goto 45
	ATerm  goto 46


state 6
	ATerm : TRUE .  (74)

	.  reduce 74


state 7
	ATerm : FALSE .  (75)

	.  reduce 75


state 8
	Term : LET . LCID EQ Term IN Term  (33)
	Term : LET . USCORE EQ Term IN Term  (34)

	LCID  shift 52
	USCORE  shift 53
	.  error


state 9
	AppTerm : FIX . PathTerm  (40)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 50
	INTV  shift 31
	FLOATV  shift 32
	STRINGV  shift 33
	FRACV  shift 34
	LCURLY  shift 37
	LPAREN  shift 38
	LT  shift 39
	.  error

	PathTerm  goto 54
	AscribeTerm  goto 45
	ATerm  goto 46


state 10
	Term : LETREC . LCID COLON Type EQ Term IN Term  (35)

	LCID  shift 55
	.  error


state 11
	Term : CASE . Term OF Cases  (36)

	INERT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	CASE  shift 11
	UNIT  shift 12
	REF  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	ADD  shift 18
	SUB  shift 19
	MUL  shift 20
	DIV  shift 21
	INV  shift 22
	SETPRECISION  shift 23
	ROUND  shift 24
	UP  shift 25
	DOWN  shift 26
	LESS  shift 27
	TORANGE  shift 28
	LCID  shift 50
	INTV  shift 31
	FLOATV  shift 32
	STRINGV  shift 33
	FRACV  shift 34
	BANG  shift 35
	LCURLY  shift 37
	LPAREN  shift 38
	LT  shift 39
	.  error

	Term  goto 56
	AppTerm  goto 43
	PathTerm  goto 44
	AscribeTerm  goto 45
	ATerm  goto 46


state 12
	ATerm : UNIT .  (79)

	.  reduce 79


state 13
	AppTerm : REF . PathTerm  (41)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 50
	INTV  shift 31
	FLOATV  shift 32
	STRINGV  shift 33
	FRACV  shift 34
	LCURLY  shift 37
	LPAREN  shift 38
	LT  shift 39
	.  error

	PathTerm  goto 57
	AscribeTerm  goto 45
	ATerm  goto 46


state 14
	AppTerm : TIMESFLOAT . PathTerm PathTerm  (43)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 50
	INTV  shift 31
	FLOATV  shift 32
	STRINGV  shift 33
	FRACV  shift 34
	LCURLY  shift 37
	LPAREN  shift 38
	LT  shift 39
	.  error

	PathTerm  goto 58
	AscribeTerm  goto 45
	ATerm  goto 46


state 15
	AppTerm : SUCC . PathTerm  (44)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 50
	INTV  shift 31
	FLOATV  shift 32
	STRINGV  shift 33
	FRACV  shift 34
	LCURLY  shift 37
	LPAREN  shift 38
	LT  shift 39
	.  error

	PathTerm  goto 59
	AscribeTerm  goto 45
	ATerm  goto 46


state 16
	AppTerm : PRED . PathTerm  (45)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 50
	INTV  shift 31
	FLOATV  shift 32
	STRINGV  shift 33
	FRACV  shift 34
	LCURLY  shift 37
	LPAREN  shift 38
	LT  shift 39
	.  error

	PathTerm  goto 60
	AscribeTerm  goto 45
	ATerm  goto 46


state 17
	AppTerm : ISZERO . PathTerm  (46)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 50
	INTV  shift 31
	FLOATV  shift 32
	STRINGV  shift 33
	FRACV  shift 34
	LCURLY  shift 37
	LPAREN  shift 38
	LT  shift 39
	.  error

	PathTerm  goto 61
	AscribeTerm  goto 45
	ATerm  goto 46


state 18
	AppTerm : ADD . PathTerm PathTerm  (47)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 50
	INTV  shift 31
	FLOATV  shift 32
	STRINGV  shift 33
	FRACV  shift 34
	LCURLY  shift 37
	LPAREN  shift 38
	LT  shift 39
	.  error

	PathTerm  goto 62
	AscribeTerm  goto 45
	ATerm  goto 46


state 19
	AppTerm : SUB . PathTerm PathTerm  (48)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 50
	INTV  shift 31
	FLOATV  shift 32
	STRINGV  shift 33
	FRACV  shift 34
	LCURLY  shift 37
	LPAREN  shift 38
	LT  shift 39
	.  error

	PathTerm  goto 63
	AscribeTerm  goto 45
	ATerm  goto 46


state 20
	AppTerm : MUL . PathTerm PathTerm  (49)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 50
	INTV  shift 31
	FLOATV  shift 32
	STRINGV  shift 33
	FRACV  shift 34
	LCURLY  shift 37
	LPAREN  shift 38
	LT  shift 39
	.  error

	PathTerm  goto 64
	AscribeTerm  goto 45
	ATerm  goto 46


state 21
	AppTerm : DIV . PathTerm PathTerm  (50)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 50
	INTV  shift 31
	FLOATV  shift 32
	STRINGV  shift 33
	FRACV  shift 34
	LCURLY  shift 37
	LPAREN  shift 38
	LT  shift 39
	.  error

	PathTerm  goto 65
	AscribeTerm  goto 45
	ATerm  goto 46


state 22
	AppTerm : INV . PathTerm  (51)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 50
	INTV  shift 31
	FLOATV  shift 32
	STRINGV  shift 33
	FRACV  shift 34
	LCURLY  shift 37
	LPAREN  shift 38
	LT  shift 39
	.  error

	PathTerm  goto 66
	AscribeTerm  goto 45
	ATerm  goto 46


state 23
	AppTerm : SETPRECISION . PathTerm PathTerm  (53)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 50
	INTV  shift 31
	FLOATV  shift 32
	STRINGV  shift 33
	FRACV  shift 34
	LCURLY  shift 37
	LPAREN  shift 38
	LT  shift 39
	.  error

	PathTerm  goto 67
	AscribeTerm  goto 45
	ATerm  goto 46


state 24
	AppTerm : ROUND . PathTerm PathTerm  (54)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 50
	INTV  shift 31
	FLOATV  shift 32
	STRINGV  shift 33
	FRACV  shift 34
	LCURLY  shift 37
	LPAREN  shift 38
	LT  shift 39
	.  error

	PathTerm  goto 68
	AscribeTerm  goto 45
	ATerm  goto 46


state 25
	AppTerm : UP . PathTerm PathTerm  (55)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 50
	INTV  shift 31
	FLOATV  shift 32
	STRINGV  shift 33
	FRACV  shift 34
	LCURLY  shift 37
	LPAREN  shift 38
	LT  shift 39
	.  error

	PathTerm  goto 69
	AscribeTerm  goto 45
	ATerm  goto 46


state 26
	AppTerm : DOWN . PathTerm PathTerm  (56)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 50
	INTV  shift 31
	FLOATV  shift 32
	STRINGV  shift 33
	FRACV  shift 34
	LCURLY  shift 37
	LPAREN  shift 38
	LT  shift 39
	.  error

	PathTerm  goto 70
	AscribeTerm  goto 45
	ATerm  goto 46


state 27
	AppTerm : LESS . PathTerm PathTerm  (52)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 50
	INTV  shift 31
	FLOATV  shift 32
	STRINGV  shift 33
	FRACV  shift 34
	LCURLY  shift 37
	LPAREN  shift 38
	LT  shift 39
	.  error

	PathTerm  goto 71
	AscribeTerm  goto 45
	ATerm  goto 46


state 28
	AppTerm : TORANGE . PathTerm  (57)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 50
	INTV  shift 31
	FLOATV  shift 32
	STRINGV  shift 33
	FRACV  shift 34
	LCURLY  shift 37
	LPAREN  shift 38
	LT  shift 39
	.  error

	PathTerm  goto 72
	AscribeTerm  goto 45
	ATerm  goto 46


state 29
	Command : UCID . TyBinder  (4)
	TyBinder : .  (25)

	EQ  shift 73
	SEMI  reduce 25

	TyBinder  goto 74


state 30
	Command : LCID . Binder  (5)
	ATerm : LCID .  (73)

	COLON  shift 75
	EQ  shift 76
	INERT  reduce 73
	TRUE  reduce 73
	FALSE  reduce 73
	AS  reduce 73
	UNIT  reduce 73
	LCID  reduce 73
	INTV  reduce 73
	FLOATV  reduce 73
	STRINGV  reduce 73
	FRACV  reduce 73
	COLONEQ  reduce 73
	DOT  reduce 73
	LCURLY  reduce 73
	LPAREN  reduce 73
	LT  reduce 73
	SEMI  reduce 73

	Binder  goto 77


state 31
	ATerm : INTV .  (81)

	.  reduce 81


state 32
	ATerm : FLOATV .  (80)

	.  reduce 80


state 33
	ATerm : STRINGV .  (78)

	.  reduce 78


state 34
	ATerm : FRACV .  (82)

	.  reduce 82


state 35
	AppTerm : BANG . PathTerm  (42)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 50
	INTV  shift 31
	FLOATV  shift 32
	STRINGV  shift 33
	FRACV  shift 34
	LCURLY  shift 37
	LPAREN  shift 38
	LT  shift 39
	.  error

	PathTerm  goto 78
	AscribeTerm  goto 45
	ATerm  goto 46


state 36
	toplevel : EOF .  (1)

	.  reduce 1


state 37
	ATerm : LCURLY . Fields RCURLY  (76)
	Fields : .  (83)

	INERT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	CASE  shift 11
	UNIT  shift 12
	REF  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	ADD  shift 18
	SUB  shift 19
	MUL  shift 20
	DIV  shift 21
	INV  shift 22
	SETPRECISION  shift 23
	ROUND  shift 24
	UP  shift 25
	DOWN  shift 26
	LESS  shift 27
	TORANGE  shift 28
	LCID  shift 79
	INTV  shift 31
	FLOATV  shift 32
	STRINGV  shift 33
	FRACV  shift 34
	BANG  shift 35
	LCURLY  shift 37
	LPAREN  shift 38
	LT  shift 39
	RCURLY  reduce 83

	Term  goto 80
	AppTerm  goto 43
	PathTerm  goto 44
	AscribeTerm  goto 45
	ATerm  goto 46
	Fields  goto 81
	NEFields  goto 82
	Field  goto 83


state 38
	ATerm : LPAREN . TermSeq RPAREN  (71)

	INERT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	CASE  shift 11
	UNIT  shift 12
	REF  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	ADD  shift 18
	SUB  shift 19
	MUL  shift 20
	DIV  shift 21
	INV  shift 22
	SETPRECISION  shift 23
	ROUND  shift 24
	UP  shift 25
	DOWN  shift 26
	LESS  shift 27
	TORANGE  shift 28
	LCID  shift 50
	INTV  shift 31
	FLOATV  shift 32
	STRINGV  shift 33
	FRACV  shift 34
	BANG  shift 35
	LCURLY  shift 37
	LPAREN  shift 38
	LT  shift 39
	.  error
